Fix search bar overlap with user menu

--- a/src/app/components/map/map.css
+++ b/src/app/components/map/map.css
@@ -8,7 +8,7 @@
 /* City Search Bar */
 .search-bar {
   position: absolute;
-  top: 20px;
+  top: 70px;
   right: 20px;
   z-index: 1000;
   display: flex;
